perf: make filter txs by address, stake_address, token work with indexes